@@ -1,0 +1,7 @@
+noinst_PROGRAMS = scratch
+
+scratch_SOURCES = scratch.c
+scratch_CFLAGS = $(CLTR_CFLAGS)
+scratch_LDFLAGS = \
+    $(CLTR_LIBS) \
+    $(top_builddir)/clutter/libclutter.la 
